Pagina de creación de fases actualizada

--- a/Test/site/administracion/site/fases.html
+++ b/Test/site/administracion/site/fases.html
@@ -83,7 +83,7 @@
             <td class="centerPanel">
                 <div class='contentpanel'>
                     <h5 class="width95p floatLeft borPomergranate tableHeader"> fases</h5>
-                    <div id="gridRoles" class="width95p floatLeft"></div>
+                    <div id="gridFases" class="width95p floatLeft"></div>
                 </div>
             </td>
         </tr>
